--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -4,11 +4,12 @@
 td,
 tr {
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
 }
 
 .calendar-container {
     border: 2px solid skyblue;
+    text-align: center;
 }
 
 .calendar {
