--- a/src/components/appointment/Appointment.css
+++ b/src/components/appointment/Appointment.css
@@ -51,5 +51,25 @@
   }
 
   h3{
-    color: #17A2b8;
+    color: whitesmoke;
   }
+
+  tr:nth-child(even) {background-color: #f2f2f2;}
+
+  tr:hover {background-color: #f5f5f5;}
+
+  th, td {
+    border-bottom: 1px solid #ddd;
+  }
+
+  th, td {
+    padding: 15px;
+    text-align: left;
+  }
+
+  .tableStyle{
+    text-align: center;
+  }
+
+  
+
